TEST_PROGRAMS/VALID/09/assignments.go
// various allowed assignements
package assignements

func main() {
    a = 1
    b += 2
    a, b = 3, 5
    x[1], x[0] = 0, 2
}
