TEST_PROGRAMS/INVALID/04/72.go
package main

func main() {
    var a = 2
    // Non lvalue in assignment
    a[:]++
}
